--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
-      <nav class="navbar navbar-expand-md bg-light fixed-top">
+      <nav class="navbar navbar-expand-md bg-dark fixed-top">
         <a class="navbar-brand" href="#"><span class="text-primary">MEN</span>SAH</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
