--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
       <nav class="navbar navbar-expand-md bg-dark fixed-top">
-        <a class="navbar-brand" href="#"><span class="text-primary">MEN</span>SAH</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
