--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
-      <nav class="navbar navbar-expand-md bg-dark fixed-top">
-        <a class="navbar-brand" href="#"></a>
+      <nav class="navbar navbar-expand-md bg-light fixed-top">
+        <a class="navbar-brand" href="#">Mensah</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
