--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">RESEME</a>
+              <a class="nav-link" href="#">RESUME</a>
             </li>    
           </ul>
         </div>  
