--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </head>
     <body>
       <nav class="navbar navbar-expand-md bg-light fixed-top">
-        <a class="navbar-brand" href="#">MENSAH</a>
+        <a class="navbar-brand" href="#">
+          <span class="text.primary">MEN</span>SAH
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
