--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
-      <nav class="navbar navbar-expand-md bg-light fixed-top">
+      <nav class="navbar navbar-expand-md bg-dark fixed-top">
         <a class="navbar-brand" href="#">
           <span class="colname">MEN</span>SAH
         </a>
