--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
       <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
         <a class="navbar-brand" href="#">
-          <span class="colname">MEN</span>SAH
+          <span class="text-primary font-weight-bolder">MEN</span>SAH
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
