--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">RESUME</a>
+              <span class="text-primary"><a class="nav-link" href="#">RESUME</a></span>
             </li>    
           </ul>
         </div>  
