--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-              <span class="text-primary"><a class="nav-link" href="#">RESUME</a></span>
+            <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
             </li>    
           </ul>
         </div>  
