--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             </li>
             <li class="nav-item">
             <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
+            <div class="rsimg-container">
+              <img class="rsize" src="images/crossimg.png">
+            </div>
             </li>    
           </ul>
         </div>  
