--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="nav-item">
             <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
             <div class="rsimg-container">
-              <img class="rsize" src="images/crossimg.png">
+              <img class="rsize" width="50px" height="20px" src="images/crossimg.png">
             </div>
             </li>    
           </ul>
