correction image size#1

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
+              <div class="rsizecon">
+                <img class="rsize" width="90px" height="50px" src="images/crossimg.png">
+              </div>
             <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
-            <div class="rsimg-container">
-              <img class="rsize" width="50px" height="20px" src="images/crossimg.png">
-            </div>
             </li>    
           </ul>
         </div>  
