--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <div class="rsizecon">
+                <img class="rsize" width="90px" height="50px" src="images/crossims.png">
+              </div>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
             </li>
             <li class="nav-item">
@@ -40,9 +45,6 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-              <div class="rsizecon">
-                <img class="rsize" width="90px" height="50px" src="images/crossimg.png">
-              </div>
             <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
             </li>    
           </ul>
