Correction image alteration#1

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <div class="rsizecon">
-                <img class="rsize" width="90px" height="50px" src="images/crossims.png">
-              </div>
+                <img class="rsize" src="images/crossimg.png">
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
