--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <div class="conta">
                 <img class="rsize" src="images/crossimg.png">
+                </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
