--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <img src="images/crossimg.png" alt="cross" style="width: 150px;">
+              <img src="images/crossimg.png" alt="cross" style="width: 150px;height: 60px;display: inline-block;">
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
