--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     </head>
     <body>
-      <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
+      <nav class="navbar navbar-expand-md bg-light navbar-light">
         <a class="navbar-brand" href="#">
           <span class="h4"><span class="text-primary">MEN</span></span>SAH
         </a>
@@ -27,6 +27,9 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <img src="images/crossimg.png" alt="beam-of-lines" class="cross">
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">HOME</a>
             </li>
