--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
         <meta name="keywords" content="Portfolio,Works,Projects,Ghana,Resume,Hire me,Front-end,React,Dev,Javascript,Nodejs,developer,web developer">
         <meta name="author" content="Kwaku Asare">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles/designs.css">
+        <style>
+        a:link,a:visited {
+    color: black;
+  }
+  a:hover{
+      color: white;
+  }
+  a:active{
+      color: lightskyblue;
+  }
+   .cross{
+    width: 55px;
+    z-index: -1px;
+    display:inline-block;
+    position:relative;
+    left:265%;
+    top:5px;
+   }
+        </style>
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
