Addition of body

--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
           </ul>
         </div>  
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <p class="active">HELLO WORLD</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6"></div>
+          <p>WELCOME TO MY WEBSITE</p>
+          <p>I am Kwaku Mensah ,a full MERN Stack developer</p>
+          <div class="col-sm-6">
+            <p>IMAGE HERE</p>
+          </div>
+        </div>
+      </div>
         <script type="text/babel" src="test.js"></script>
     </body>
 </html>
