correction of container elements

--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6"></div>
+          <div class="col-sm-6">
           <p>WELCOME TO MY WEBSITE</p>
           <p>I am Kwaku Mensah ,a full MERN Stack developer</p>
+          </div>
           <div class="col-sm-6">
-            <p>IMAGE HERE</p>
+            <p>IMAGE</p>
           </div>
         </div>
       </div>
