Changed the title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Kwaku Asare web Portfolio</title>
+        <title>Kwaku Asare</title>
         <meta charset="UTF-8"/>
         <meta name="description" content="A personal Porfolio of a MERN stack full developer">
         <meta name="keywords" content="Portfolio,Works,Projects,Ghana,Resume,Hire me,Front-end,React,Dev,Javascript,Nodejs,developer,web developer">
