--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Kwaku Asare</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="images/webicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/webicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/webicon/favicon-16x16.png">
+        <link rel="icon" href="images/webicon/favicon.ico">
+        <link rel="manifest" href="images/webicon/site.webmanifest">
         <meta charset="UTF-8"/>
         <meta name="description" content="A personal Porfolio of a MERN stack full developer">
         <meta name="keywords" content="Portfolio,Works,Projects,Ghana,Resume,Hire me,Front-end,React,Dev,Javascript,Nodejs,developer,web developer">
@@ -31,7 +36,6 @@
   }
 }
         </style>
-        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
