Update meta content <description>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="images/webicon/favicon.ico">
         <link rel="manifest" href="images/webicon/site.webmanifest">
         <meta charset="UTF-8"/>
-        <meta name="description" content="A personal Porfolio of a MERN stack full developer">
+        <meta name="description" content="A personal Porfolio of my MERN stack full developer roadmap">
         <meta name="keywords" content="Portfolio,Works,Projects,Ghana,Resume,Hire me,Front-end,React,Dev,Javascript,Nodejs,developer,web developer">
         <meta name="author" content="Kwaku Asare">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
