--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p class="active">HELLO WORLD</p>
+            <p class="bg-active">HELLO WORLD</p>
           </div>
         </div>
         <div class="row">
