--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         </div>  
       </nav>
       <div class="container">
-        <div class="row">
+        <div class="border mt-5">
+        <div class="row mt-1">
           <div class="col-sm-6">
-            <p class="bg-active">HELLO WORLD</p>
+            <p class="h2"><span class="text-primary">HELLO</span>WORLD</p>
           </div>
         </div>
         <div class="row">
@@ -89,6 +90,7 @@
           <div class="col-sm-6">
             <p>IMAGE</p>
           </div>
+        </div>
         </div>
       </div>
         <script type="text/babel" src="test.js"></script>
