--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           </ul>
         </div>  
       </nav>
-      <div class="container">
+      <div class="container-fluid">
         <div class="border mt-5">
-        <div class="row mt-1">
+        <div class="row mt-1 ml-2">
           <div class="col-sm-6">
-            <p class="h2"><span class="text-primary">HELLO</span>WORLD</p>
+            <p class="h2"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
         </div>
         <div class="row">
