--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </nav>
       <div class="container-fluid">
         <div class="border mt-5">
-        <div class="row mt-1 ml-2">
+        <div class="row mt-1 pl-2">
           <div class="col-sm-6">
             <p class="h2"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
