--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
         </div>
-        <div class="row">
+        <div style="height: 100px;"></div>
+        <div class="row mt-3">
           <div class="col-sm-6">
           <p>WELCOME TO MY WEBSITE</p>
-          <p>I am Kwaku Mensah ,a full MERN Stack developer</p>
+          <p>I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
             <p>IMAGE</p>
