--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div style="height: 100px;"></div>
         <div class="row mt-3">
           <div class="col-sm-6">
-          <p>WELCOME TO MY WEBSITE</p>
+          <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p>I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
