--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>  
       </nav>
       <div class="container-fluid">
-        <div class="border mt-5">
+        <div class="border mt-5 w-75">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
