--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         </div>  
       </nav>
       <div class="container-fluid">
-        <div class="border mt-5 w-75">
+        <div class="d-flex justify-content-center">
+        <div class="border mt-5 w-80">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
@@ -91,6 +92,7 @@
           <div class="col-sm-6">
             <p>IMAGE</p>
           </div>
+        </div>
         </div>
         </div>
       </div>
