--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     left:507%;
     top:-3px;
    }
+   .shape{
+     width: 80%;
+     border-style: solid;
+     border-width: 2px;
+     height: auto;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -76,7 +82,7 @@
         </div>  
       </nav>
       <div class="container-fluid">
-        <div class="border mt-5 w-">
+        <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
