--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>  
       </nav>
       <div class="container-fluid">
+        <div class="justify-content-center">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
@@ -97,6 +98,7 @@
           <div class="col-sm-6">
             <p>IMAGE</p>
           </div>
+        </div>
         </div>
         </div>
       </div>
