--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>  
       </nav>
       <div class="container-fluid">
-        <div class="justify-content-center">
+        <div class="row d-flex justify-content-center">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
