--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
      border-style: solid;
      border-width: 2px;
      height: auto;
+     margin: auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -82,7 +83,6 @@
         </div>  
       </nav>
       <div class="container-fluid">
-        <div class="row d-flex justify-content-center">
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-sm-12">
@@ -98,7 +98,6 @@
           <div class="col-sm-6">
             <p>IMAGE</p>
           </div>
-        </div>
         </div>
         </div>
       </div>
