--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
     top:-3px;
    }
    .shape{
-     width: 88%;
+     width: 90%;
      border-style: solid;
      border-width: 2px;
      height: auto;
      margin: auto;
+     margin-top: 5px;
    }
    @media screen and (max-width: 767px) {
      .cross{
