--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         <div class="row mt-1">
           <div class="col-sm-6">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
-          <p>I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
+          <p class="pl-5">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
-            <p>IMAGE</p>
+            <div class="border">IMAGE</div>
           </div>
         </div>
         </div>
