--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row mt-1">
           <div class="col-sm-6">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
-          <p class="pl-5">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
+          <p class="pl-5 ml-3">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
             <div class="border">IMAGE</div>
