--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
-            <div class="border w-75">IMAGE</div>
+            <div class="border w-75"><span class="rounded-circle">asdas</span></div>
           </div>
         </div>
         </div>
