--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
      margin: auto;
      margin-top: 70px;
    }
+   #rond{
+     background-color: black;
+     display: inline-block;
+     width: 30px;
+     height: 50px;
+     margin: 4px;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -97,7 +104,7 @@
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6">
-            <div class="border w-75"><span class="rounded-circle">asdas</span></div>
+            <div class="border w-75"><span class="rounded-circle" id="rond"></span></div>
           </div>
         </div>
         </div>
