--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
         </div>
         <div style="height: 100px;"></div>
         <div class="row mt-1">
-          <div class="col-sm-6">
+          <div class="col-sm-6 h-75">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 h-100">
             <div class="border w-75"><span class="rounded-circle" id="rond"></span></div>
           </div>
         </div>
