--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
    #rond{
      background-color: black;
      display: inline-block;
-     width: 30px;
-     height: 50px;
+     width: 70%;
+     height: 200px;
      margin: 4px;
    }
    @media screen and (max-width: 767px) {
