--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
      background-color: black;
      display: inline-block;
      width: 100%;
-     height: 400px;
-     margin: 4px;
+     height: 350px;
+     margin:auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
