--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
      background-color: black;
      display: inline-block;
      width: 100%;
-     height: 350px;
+     height: 300px;
      margin:auto;
    }
    @media screen and (max-width: 767px) {
@@ -104,7 +104,9 @@
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6 h-100">
+            <div class="justify-content-center">
             <div class="border w-75"><span class="rounded-circle" id="rond"></span></div>
+          </div>
           </div>
         </div>
         </div>
