--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-6 h-100">
-            <div class="justify-content-center">
+            <div class="border">
             <div class="border w-75"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
