--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="col-sm-6 h-100">
             <div class="border">
-            <div class="border w-75"><span class="rounded-circle" id="rond"></span></div>
+            <div class="border w-75 justify-content-center"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
