--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
      height: 300px;
      margin:auto;
    }
+   #brond{
+     margin: auto;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -105,7 +108,7 @@
           </div>
           <div class="col-sm-6 h-100">
             <div class="border">
-            <div class="border w-75 d-flex justify-content-center"><span class="rounded-circle" id="rond"></span></div>
+            <div class="border w-75" id="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
