--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
         </div>
-        <div style="height: 100px;"></div>
-        <div class="row mt-1">
+        <div style="height: 80px;"></div>
+        <div class="row">
           <div class="col-sm-6 h-75">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
