--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
    #rond{
      background-color: black;
      display: inline-block;
-     width: 80%;
-     height: 300px;
+     width: 100%;
+     height: auto;
      margin:auto;
    }
    #brond{
      margin: auto;
-   }
+     height:200px;
+    }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -102,11 +103,11 @@
         </div>
         <div style="height: 80px;"></div>
         <div class="row">
-          <div class="col-sm-6 h-75">
+          <div class="col-sm-6">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-6 h-100">
+          <div class="col-sm-6">
             <div class="border">
             <div class="border w-75" id="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
