--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      display: inline-block;
      width: 80%;
      height: 200px;
-     margin:auto;
+     margin-left: 6px;
    }
    #brond{
      margin: auto;
