--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
    #brond{
      margin: auto;
      height:auto;
+     clear: right;
     }
    @media screen and (max-width: 767px) {
      .cross{
