--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
      display: inline-block;
      width: 80%;
      height: 200px;
-     float: right;
+     position: absolute;
+     right: 0px;
    }
    #brond{
      margin: auto;
      height:auto;
-     clear: right;
     }
    @media screen and (max-width: 767px) {
      .cross{
