--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
      background-color: black;
      display: inline-block;
      width: 80%;
-     height: 200px;
-     position: absolute;
-     right: 0px;
+     height: 300px;
+     margin:auto;
    }
    #brond{
      margin: auto;
-     height:auto;
-    }
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -104,11 +102,11 @@
         </div>
         <div style="height: 80px;"></div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-6 h-75">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 h-100">
             <div class="border">
             <div class="border w-75" id="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
