--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
    #rond{
      background-color: black;
      display: inline-block;
-     width: 80%;
-     height: 300px;
+     width: 60%;
+     height: 200px;
      margin:auto;
    }
    #brond{
@@ -102,13 +102,13 @@
         </div>
         <div style="height: 45px;"></div>
         <div class="row">
-          <div class="col-sm-6 h-75">
+          <div class="col-sm-6">
           <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
           <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-6 h-100">
+          <div class="col-sm-6">
             <div class="border">
-            <div class="border w-75" id="brond"><span class="rounded-circle" id="rond"></span></div>
+            <div class="border" id="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
