--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
      display: inline-block;
      width: 60%;
      height: 200px;
-     margin:auto;
    }
    #brond{
+     width: 100%;
      margin: auto;
    }
    @media screen and (max-width: 767px) {
