--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
      display: inline-block;
      width: 60%;
      height: 200px;
+     margin: auto;
    }
    #brond{
      width: 100%;
@@ -108,7 +109,7 @@
           </div>
           <div class="col-sm-6">
             <div class="border">
-            <div class="border" id="brond"><span class="rounded-circle" id="rond"></span></div>
+            <div class="border"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
