--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
      height: 200px;
      margin: auto;
    }
-   #brond{
-     width: 100%;
-     margin: auto;
+   .brond{
+     width: 60%;
+     border-width: 2px;
+     border-style: solid;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -109,7 +110,7 @@
           </div>
           <div class="col-sm-6">
             <div class="border">
-            <div class="border"><span class="rounded-circle" id="rond"></span></div>
+            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
