--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
      width: 60%;
      border-width: 2px;
      border-style: solid;
+     margin: auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
