--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      display: inline-block;
      width: 60%;
      height: 200px;
-     margin: auto;
+     margin-left: 20px;
    }
    .brond{
      width: 60%;
