--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
    }
    #rond{
      background-color: black;
-     display: inline-block;
+     display: block;
      width: 60%;
      height: 200px;
-     margin-left: 20px;
+     margin:auto;
    }
    .brond{
      width: 60%;
