--- a/index.html
+++ b/index.html
@@ -41,15 +41,7 @@
    #rond{
      background-color: black;
      display: block;
-     width: 60%;
      height: 200px;
-     margin:auto;
-   }
-   .brond{
-     width: 60%;
-     border-width: 2px;
-     border-style: solid;
-     margin: auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -111,7 +103,7 @@
           </div>
           <div class="col-sm-6">
             <div class="border">
-            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
+              <span class="rounded-circle mw-100 mx-auto"></span>
           </div>
           </div>
         </div>
