--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
    #rond{
      background-color: black;
      display: block;
+     width: 60%;
      height: 200px;
+     margin:auto;
+   }
+   .brond{
+     width: 60%;
+     border-width: 2px;
+     border-style: solid;
+     margin: auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -103,7 +111,7 @@
           </div>
           <div class="col-sm-6">
             <div class="border">
-              <span class="rounded-circle mw-100 mx-auto"></span>
+            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
           </div>
           </div>
         </div>
