--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
      width: 60%;
      height: 200px;
      margin:auto;
+     float: right;
    }
    .brond{
      width: 60%;
      border-width: 2px;
      border-style: solid;
      margin: auto;
+     height: auto;
    }
    @media screen and (max-width: 767px) {
      .cross{
