--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
      border-width: 2px;
      border-style: solid;
      margin: auto;
-     height: auto;
+   }
+   .brond::after{
+     content: "";
+    clear: both;
+  display: table;
    }
    @media screen and (max-width: 767px) {
      .cross{
