--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    #rond{
      background-color: black;
      display: block;
-     max-width: 100%;
+     max-width: 500px;
      height: 200px;
      margin:auto;
      float: right;
