--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
    #rond{
      background-color: black;
      display: block;
-     max-width: 500px;
      height: 200px;
      margin:auto;
      float: right;
@@ -117,7 +116,7 @@
           </div>
           <div class="col-sm-6">
             <div class="border">
-            <div class="brond"><span class="rounded-circle" id="rond"></span></div>
+            <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
           </div>
         </div>
