--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div style="height: 45px;"></div>
         <div class="row">
           <div class="col-sm-5">
-          <p class="h3 pl-5">WELCOME TO MY WEBSITE</p>
-          <p class="pl-5 ml-4 mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
+          <p class="h3">WELCOME TO MY WEBSITE</p>
+          <p class="mt-1 border">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-7">
             <div class="border">
