--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
      border-style: solid;
      margin: auto;
    }
+   .dtextintro{
+     font-size: 8vw;
+   }
+   .dtextinfo{
+     font-size: 2vw;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -105,7 +111,7 @@
         <div style="height: 45px;"></div>
         <div class="row">
           <div class="col-sm-5">
-          <p class="dtextintro">WELCOME TO MY WEBSITE</p>
+          <h3 class="dtextintro">WELCOME TO MY WEBSITE</h3>
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-7">
