Check text format test #1

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
      margin: auto;
    }
    .dtextintro{
-     font-size: 8vw;
+     font-size: 6vw;
    }
    .dtextinfo{
-     font-size: 2vw;
+     font-size: 4vw;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -111,7 +111,7 @@
         <div style="height: 45px;"></div>
         <div class="row">
           <div class="col-sm-5">
-          <h3 class="dtextintro">WELCOME TO MY WEBSITE</h3>
+          <p class="dtextintro">WELCOME TO MY WEBSITE</p>
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-7">
