--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
      border-style: solid;
      margin: auto;
    }
-   .dtextintro{
-     font-size: 6vw;
-   }
    .dtextinfo{
-     font-size: 4vw;
+     font-size: 3vw;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -111,7 +108,7 @@
         <div style="height: 45px;"></div>
         <div class="row">
           <div class="col-sm-5">
-          <p class="dtextintro">WELCOME TO MY WEBSITE</p>
+          <p class="h3 border">WELCOME TO MY WEBSITE</p>
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-sm-7">
