--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
    }
    .dtextinfo{
      font-size: 3vw;
+     border-style: solid;
+     border-width: 1px;
    }
    @media screen and (max-width: 767px) {
      .cross{
