--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      margin: auto;
    }
    .dtextinfo{
-     font-size: 3vw;
+     font-size: 2.5em;
      border-style: solid;
      border-width: 1px;
    }
