--- a/index.html
+++ b/index.html
@@ -108,17 +108,21 @@
         </div>
         <div style="height: 45px;"></div>
         <div class="row">
-          <div class="col-sm-5">
+          <div class="col-sm-12">
           <p class="h3 border">WELCOME TO MY WEBSITE</p>
+          </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-7">
+          <div class="col-sm-8">
             <div class="border">
             <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
           </div>
         </div>
-        </div>
+      </div>
       </div>
         <script type="text/babel" src="test.js"></script>
     </body>
