--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
       <div class="container-fluid">
         <div class="shape">
         <div class="row mt-1 pl-2">
-          <div class="col-sm-12">
+          <div class="col-md-12">
             <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
         </div>
         <div style="height: 45px;"></div>
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-md-12">
           <p class="h3 border">WELCOME TO MY WEBSITE</p>
           </div>
           </div>
           <div class="row">
-            <div class="col-sm-4">
+            <div class="col-md-4">
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-sm-8">
+          <div class="col-md-8">
             <div class="border">
             <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
