--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
           </div>
           </div>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-3"></div>
+          <div class="col-md-6">
             <div class="border">
             <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
