--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      width: 50%;
      border-width: 2px;
      border-style: solid;
-     margin: auto;
+     float: right;
    }
    .dtextinfo{
      border-style: solid;
@@ -119,7 +119,7 @@
           <div class="col-md-1"></div>
           <div class="col-md-6">
             <div class="border">
-            <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
+            <div class="float-md-right border"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
           </div>
         </div>
