--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
      .cross{
     display: none;
   }
+  .brond{
+    margin: auto;
+  }
 }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
