--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
+    z-index: -2;
   }
   .brond{
     margin: auto;
+    float: none;
   }
 }
         </style>
