--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
    .dtextinfo{
      border-style: solid;
      border-width: 1px;
+     letter-spacing: 2px;
+   }
+   #lsfont{
+     letter-spacing: 3px;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -113,13 +117,13 @@
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
-            <p class="h1"><span class="text-primary">HELLO </span> WORLD</p>
+            <p class="h1" id="lsfont"><span class="text-primary">HELLO </span> WORLD</p>
           </div>
         </div>
-        <div style="height: 45px;"></div>
+        <div style="height: 30px;"></div>
         <div class="row">
           <div class="col-md-12">
-          <p class="h3 border">WELCOME TO MY WEBSITE</p>
+          <p class="h3 border" id="lsindex">WELCOME TO MY WEBSITE</p>
           </div>
           </div>
           <div class="row">
@@ -127,7 +131,7 @@
           <p class="dtextinfo">I am Kwaku Mensah ,a <br>full MERN Stack developer</p>
           </div>
           <div class="col-md-1"></div>
-          <div class="col-md-6">
+          <div class="col-md-7">
             <div class="border" id="cbrond">
             <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
