--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
      border-width: 1px;
      letter-spacing: 2px;
    }
-   #lsfont{
+   #lsindex{
      letter-spacing: 3px;
+   }
+   #lsfont{
+     letter-spacing: 2px;
    }
    @media screen and (max-width: 767px) {
      .cross{
