--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
     margin: auto;
     float: none;
   }
+  .dtextinfo,#lsfont,#lsindex{
+    text-align: center;
+  }
 }
         </style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -120,7 +123,7 @@
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
-            <p class="h1" id="lsfont"><span class="text-primary">HELLO </span> WORLD</p>
+            <p class="h1" id="lsfont"><span class="text-primary">Hello </span> World</p>
           </div>
         </div>
         <div style="height: 30px;"></div>
