appending font styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <meta name="author" content="Kwaku Asare">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
+          @font-face {
+            font-family: rounded;
+            src: url(/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Bold.ttf);
+          }
+          @font-face {
+            font-family: typodis;
+            src: url(/fonts/M_PLUS_Code_Latin/static/MPLUSCodeLatin/MPLUSCodeLatin-Light.ttf);
+          }
         a:link,a:visited {
     color: black;
   }
@@ -59,12 +67,15 @@
      border-style: solid;
      border-width: 1px;
      letter-spacing: 3.2px;
+     font-family: typodis;
    }
    #lsindex{
      letter-spacing: 1px;
+     font-family: rounded;
    }
    #lsfont{
      letter-spacing: 1px;
+     font-family: rounded;
    }
    @media screen and (max-width: 767px) {
      .cross{
