--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    }
    #lsfont{
      letter-spacing: 1px;
-     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    }
    @media screen and (max-width: 767px) {
      .cross{
