--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <style>
           @font-face {
             font-family: rounded;
-            src: url(/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-Bold.ttf);
+            src: url(/fonts/M_PLUS_Rounded_1c/MPLUSRounded1c-ExtraBold.ttf);
           }
           @font-face {
             font-family: typodis;
@@ -75,7 +75,7 @@
    }
    #lsfont{
      letter-spacing: 1px;
-     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+     font-family: rounded;
    }
    @media screen and (max-width: 767px) {
      .cross{
