--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
    #lsindex{
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
+     font-weight: bolder;
    }
    #lsfont{
      letter-spacing: 1px;
