making font bolder

--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
    #lsindex{
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
-     font-weight: bolder;
+     font-weight: bold;
    }
    #lsfont{
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
+     font-weight: bolder;
    }
    @media screen and (max-width: 767px) {
      .cross{
