--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    .dtextinfo{
      border-style: solid;
      border-width: 1px;
-     letter-spacing: 3.2px;
+     letter-spacing: 2.7px;
      font-family: 'Source Code Pro', monospace;
    }
    #lsindex{
@@ -140,7 +140,7 @@
         <div style="height: 30px;"></div>
         <div class="row">
           <div class="col-md-12">
-          <p class="h3 border" id="lsindex">WELCOME TO MY WEBSITE</p>
+          <p class="h3 border pl-3" id="lsindex">WELCOME TO MY WEBSITE</p>
           </div>
           </div>
           <div class="row">
