--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
    .dtextinfo{
      border-style: solid;
      border-width: 1px;
-     letter-spacing: 2.7px;
+     letter-spacing: 1.6px;
+     padding-left: 10px;
      font-family: 'Source Code Pro', monospace;
    }
    #lsindex{
