--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
      border-style: solid;
      border-width: 1px;
      letter-spacing: 1.6px;
-     padding-left: 10px;
+     margin-left: 40px;
+     position: relative;
+     z-index: 2;
      font-family: 'Source Code Pro', monospace;
    }
    #lsindex{
