--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
   }
   .dtextinfo,#lsfont,#lsindex{
     text-align: center;
+    padding: 0px;
+    margin: 0px;
   }
 }
         </style>
@@ -146,10 +148,10 @@
           </div>
           </div>
           <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-6">
           <p class="dtextinfo">I am Kwaku Mensah,a <br>full MERN Stack developer</p>
           </div>
-          <div class="col-md-7">
+          <div class="col-md-6">
             <div class="border" id="cbrond">
             <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
           </div>
