--- a/index.html
+++ b/index.html
@@ -91,11 +91,17 @@
   }
   .dtextinfo,#lsfont,#lsindex{
     text-align: center;
-    padding: 0px;
-    margin: 0px;
+    padding-left: 0px;
+    margin-left: 0px;
   }
   #cbrond{
-    margin-top: 10px;
+    margin-top: 30px;
+  }
+  .dtextinfo{
+    margin-top: 20px;
+  }
+  #lsindex{
+    margin-top: 40px;
   }
 }
         </style>
