--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
      margin:auto;
    }
    .brond{
-     width: 60%;
+     max-width: 60%;
      border-width: 2px;
      border-style: solid;
      float: right;
@@ -87,7 +87,6 @@
   .brond{
     margin: auto;
     float: none;
-    width: 50%;
   }
   .dtextinfo,#lsfont,#lsindex{
     text-align: center;
