--- a/index.html
+++ b/index.html
@@ -69,10 +69,13 @@
      z-index: 2;
      font-family: 'Source Code Pro', monospace;
    }
-   #lsindex{
+   .lsindex{
      letter-spacing: 1px;
      font-family: 'Varela Round', sans-serif;
      font-weight: bold;
+     border-style: solid;
+     border-width: 1px;
+     margin-left: 27px;
    }
    #lsfont{
      letter-spacing: 1px;
@@ -89,7 +92,7 @@
     float: none;
     width: 50%;
   }
-  .dtextinfo,#lsfont,#lsindex{
+  .dtextinfo,#lsfont,.lsindex{
     text-align: center;
     padding-left: 0px;
     margin-left: 0px;
@@ -154,7 +157,7 @@
         <div style="height: 30px;"></div>
         <div class="row">
           <div class="col-md-12">
-          <p class="h3 border pl-3" id="lsindex">WELCOME TO MY WEBSITE</p>
+          <h4 class="lsindex">WELCOME TO MY WEBSITE</h4>
           </div>
           </div>
           <div class="row">
