--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      margin-top: 35px;
    }
    #rond{
-     background-color: black;
+     background-color:blue;
      display: block;
      height: 230px;
      margin:auto;
@@ -105,6 +105,9 @@
   }
   #lsindex{
     margin-top: 30px;
+  }
+  #rond{
+    height: 220px;
   }
 }
         </style>
