--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      margin-top: 35px;
    }
    #rond{
-     background-color:blue;
+     background-color:lightblue;
      display: block;
      height: 230px;
      margin:auto;
