--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
      margin-left: 47px;
      position: relative;
      z-index: 2;
+     font-weight: bold;
      font-family: 'Source Code Pro', monospace;
    }
    .lsindex{
