--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <body>
       <nav class="navbar navbar-expand-md bg-light navbar-light">
         <a class="navbar-brand" href="#">
-          <span class="h3" id="letterhead"><span class="text-primary">MEN</span>SAH</span>
+          <span class="h3" id="letterhead"><span style="background-color: #0b8de3;">MEN</span>SAH</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -144,7 +144,7 @@
               <a class="nav-link" href="#">CONTACT</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#"><span class="text-primary">RESUME</span></a>
+            <a class="nav-link" href="#"><span style="background-color: #0b8de3;">RESUME</span></a>
             </li>    
           </ul>
         </div>  
@@ -153,7 +153,7 @@
         <div class="shape">
         <div class="row mt-1 pl-2">
           <div class="col-md-12">
-            <p class="h1" id="lsfont"><span class="text-primary">Hello </span> World</p>
+            <p class="h1" id="lsfont"><span style="background-color:#0b8de3;">Hello </span> World</p>
           </div>
         </div>
         <div style="height: 30px;"></div>
