--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div style="height: 30px;"></div>
         <div class="row">
           <div class="col-md-12">
-          <h3 class="lsindex">WELCOME TO MY WEBSITE</h3>
+          <h3 class="lsindex">Welcome to my website</h3>
           </div>
           </div>
           <div class="row">
