--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
    .brond{
      width: 60%;
      float: right;
+     margin-right: 10px;
    }
    #cbrond::after{
   content: "";
@@ -164,7 +165,7 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-          <p class="dtextinfo">I am Kwaku Mensah,a <br>full MERN Stack developer</p>
+          <p class="dtextinfo">I am Kwaku Asare,a <br>full MERN Stack developer.|</p>
           </div>
           <div class="col-md-6">
             <div class="border" id="cbrond">
