--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
   .brond{
     margin: auto;
     float: none;
-    width: 50%;
   }
   .dtextinfo,#lsfont,.lsindex{
     text-align: center;
@@ -169,7 +168,7 @@
           </div>
           <div class="col-md-6">
             <div class="border" id="cbrond">
-            <div class="brond"><span class="rounded-circle mw-100" id="rond"></span></div>
+            <div class="brond"><span class="rounded-circle w-100" id="rond"></span></div>
           </div>
           </div>
         </div>
