--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
           </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+          <p>Upcoming Projects...</p>
+          </div>
+          <div class="col-md-12">
+          <ul>
+            <li>Dislike me but i know how to fly very high and tall</li>
+            <li>future is the goal and i know we have to ride the boat</li>
+          </ul>
+          </div>
+        </div>
       </div>
       </div>
         <script type="text/babel" src="test.js"></script>
