hiding the projects display

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     display: none;
     z-index: -2;
   }
+  .shapepro{
+    display: none;
+  }
   .brond{
     margin: auto;
     float: none;
@@ -170,6 +173,7 @@
           </div>
         </div>
         <div class="row">
+          <div class="shapepro">
           <div class="col-md-12">
           <p>Upcoming Projects...</p>
           </div>
@@ -178,6 +182,7 @@
             <li>Dislike me but i know how to fly very high and tall</li>
             <li>future is the goal and i know we have to ride the boat</li>
           </ul>
+          </div>
           </div>
         </div>
       </div>
