--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="row">
           <div class="shapepro">
           <div class="col-md-12">
-          <p>Upcoming Projects...</p>
+          <p class="h3">Upcoming Projects...</p>
           </div>
           <div class="col-md-12">
           <ul>
