coloring and adjusting div

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
      font-family: 'Varela Round', sans-serif;
      font-weight: bolder;
    }
+   #caption{
+     letter-spacing: 2px;
+     font-weight: bold;
+     font-family: 'Source Code Pro', monospace;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -175,7 +180,7 @@
         <div class="row">
           <div class="shapepro">
           <div class="col-md-12">
-          <p class="h3">Upcoming Projects...</p>
+          <p class="h3" id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
           </div>
           <div class="col-md-12">
           <ul>
