--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
    }
    #caption{
      letter-spacing: 2px;
+     font-weight: bold;
      font-family: 'Source Code Pro', monospace;
    }
    @media screen and (max-width: 767px) {
