--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
      letter-spacing: 2px;
      font-weight: bold;
      font-family: 'Source Code Pro', monospace;
-     font-size: medium;
+     font-size: 48px;
    }
    @media screen and (max-width: 767px) {
      .cross{
