margining the projects tab

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
      letter-spacing: 2px;
      font-weight: bold;
      font-family: 'Source Code Pro', monospace;
-     font-size: 32px;
+     font-size: 30px;
+     margin-left: 24px;
    }
    @media screen and (max-width: 767px) {
      .cross{
