margin left the project ideas

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="col-md-12">
           <p id="caption">Upcoming <span style="color:#0b8de3;">Projects</span>...</p>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12 ml-3">
           <ul>
             <li>Dislike me but i know how to fly very high and tall</li>
             <li>future is the goal and i know we have to ride the boat</li>
