--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
      font-size: 30px;
      margin-left: 24px;
    }
+   li{
+     font-family: Georgia, 'Times New Roman', Times, serif;
+   }
+   .definfo{
+     font-weight: bold;
+   }
    @media screen and (max-width: 767px) {
      .cross{
     display: none;
@@ -186,8 +192,8 @@
           </div>
           <div class="col-md-12 ml-4">
           <ul>
-            <li>Dislike me but i know how to fly very high and tall</li>
-            <li>future is the goal and i know we have to ride the boat</li>
+            <li><span class="definfo">Distance tracker app</span>-This app wil help calculat the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
+            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of coun...<sub><a href="#">click here to view more</a></sub></li>
           </ul>
           </div>
           </div>
