--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
      margin-left: 24px;
    }
    li{
-     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Source Code Pro', monospace;
    }
    .definfo{
      font-weight: bold;
+     font-size: 24px;
    }
    @media screen and (max-width: 767px) {
      .cross{
