--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
    }
    .definfo{
      font-weight: bold;
-     font-size: 24px;
+     font-size: 20px;
+   }
+   a{
+     text-decoration: none;
    }
    @media screen and (max-width: 767px) {
      .cross{
@@ -193,8 +196,8 @@
           </div>
           <div class="col-md-12 ml-4">
           <ul>
-            <li><span class="definfo">Distance tracker app</span>-This app wil help calculat the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
-            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of coun...<sub><a href="#">click here to view more</a></sub></li>
+            <li><span class="definfo">Distance tracker app</span>-This app will help calculate the distance covered over...<sub><a href="#">click here to view more</a></sub></li>
+            <li><span class="definfo">Time app</span>-This app will display a clock showing time in a variety of count...<sub><a href="#">click here to view more</a></sub></li>
           </ul>
           </div>
           </div>
