--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
      display: block;
      height: 230px;
      margin:auto;
-     position: relative;
+     position: absolute;
+     left: 2px;
    }
    .brond{
      width: 60%;
