--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      display: block;
      height: 230px;
      margin:auto;
-     position: absolute;
+     position: relative;
      left: 2px;
    }
    .brond{
